--- a/series/index.html
+++ b/series/index.html
@@ -378,7 +378,7 @@
     <div id="jw-element-254993422" data-jw-element-id="254993422" style="width: 33.333333333333%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-first-child jw-responsive lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-254993352" data-jw-element-id="254993352" class="jw-tree-node jw-element jw-image jw-node-is-first-child jw-node-is-last-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 100%;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/queen-woo-high.jpg">
-            <a href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh" data-page-link-id="17081081">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 150.16501650165%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/sr-l-rh" data-page-link-id="17081081">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 150.16501650165%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="303" height="455" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/queen-woo-high.jpg" srcset="images/queen-woo-high.jpg 303w, images/queen-woo-standard.jpg 400w" sizes="(max-width: 640px) 100vw, (max-width: 960px) 32vw, 303px" loading="lazy">
                     </picture>
                 </a>
@@ -386,7 +386,7 @@
 </div></div><div id="jw-element-254993429" data-jw-element-id="254993429" style="width: 33.333333333333%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-254993430" data-jw-element-id="254993430" class="jw-tree-node jw-element jw-image jw-node-is-first-child jw-node-is-last-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 100%;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/zwq90q/mr-queen-2020-550x330.jpg">
-            <a href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh" data-page-link-id="17081081">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 56.435643564356%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/sr-l-rh" data-page-link-id="17081081">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 56.435643564356%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="303" height="171" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/mr-queen-2020-550x330.jpg" srcset="images/mr-queen-2020-550x330.jpg 303w, images/mr-queen-2020-550x330_1.jpg 550w" sizes="(max-width: 640px) 100vw, (max-width: 960px) 32vw, 303px" loading="lazy">
                     </picture>
                 </a>
@@ -394,7 +394,7 @@
 </div></div><div id="jw-element-254993424" data-jw-element-id="254993424" style="width: 33.333333333333%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-last-child jw-responsive lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-254993425" data-jw-element-id="254993425" class="jw-tree-node jw-element jw-image jw-node-is-first-child jw-node-is-last-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-center" style="width: 100%;" data-high-res-path="https://primary.github.org/public/v/s/p/temp-vkjxumjbfoutpwainmro/z3px46/filmazon_qftxwkylw9ycqwtotf3mkamx88u.jpeg">
-            <a href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh" data-page-link-id="17081081">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 56.435643564356%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/sr-l-rh" data-page-link-id="17081081">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 56.435643564356%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="303" height="171" style="--jw-element-image--pan-x: 0.5; --jw-element-image--pan-y: 0.5" alt="" src="images/filmazon_qftxwkylw9ycqwtotf3mkamx88u.jpeg" srcset="images/filmazon_qftxwkylw9ycqwtotf3mkamx88u.jpeg 303w, images/filmazon_qftxwkylw9ycqwtotf3mkamx88u_1.jpeg 780w" sizes="(max-width: 640px) 100vw, (max-width: 960px) 32vw, 303px" loading="lazy">
                     </picture>
                 </a>
