--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -398,7 +398,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640535" data-jw-element-id="402640535" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;"> Barcelona vs B-Munich </span></h4>    </div>
+            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;"> A vs B </span></h4>    </div>
 </div><div id="jw-element-402640124" data-jw-element-id="402640124" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L1/tv1" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -461,7 +461,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640797" data-jw-element-id="402640797" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;">A-Maderid vs Lille</span></h4>    </div>
+            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;">A vs B</span></h4>    </div>
 </div><div id="jw-element-402640127" data-jw-element-id="402640127" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L1/tv5" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -525,7 +525,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640748" data-jw-element-id="402640748" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 style="text-align: center;" class="jw-heading-40"><strong><span style="color: #860f0f;">Barcelona vs B-Munich </span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;">B</span></h4>    </div>
+            <h4 style="text-align: center;" class="jw-heading-40"><strong><span style="color: #860f0f;">A vs B </span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;">B</span></h4>    </div>
 </div><div id="jw-element-402640130" data-jw-element-id="402640130" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L2/tv2" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -594,7 +594,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640810" data-jw-element-id="402640810" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;">Y-Boys vs Inter</span></h4>    </div>
+            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;">A vs B</span></h4>    </div>
 </div><div id="jw-element-402640132" data-jw-element-id="402640132" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L2/tv6" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -664,7 +664,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640749" data-jw-element-id="402640749" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 class="jw-heading-40" style="text-align: center;"><strong><span style="color: #860f0f;">RB Leipzig vs Liverpool</span></strong></h4>    </div>
+            <h4 class="jw-heading-40" style="text-align: center;"><strong><span style="color: #860f0f;">A vs B</span></strong></h4>    </div>
 </div><div id="jw-element-402640134" data-jw-element-id="402640134" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L1/tv3" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -803,7 +803,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640756" data-jw-element-id="402640756" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;">RB Leipzig vs Liverpool</span></h4>    </div>
+            <h4 style="text-align: center;" class="jw-heading-40"><span style="color: #860f0f;">A vs B</span></h4>    </div>
 </div><div id="jw-element-402640138" data-jw-element-id="402640138" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L2/tv4" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
