--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -525,7 +525,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
         </div>
 </div><div id="jw-element-402640748" data-jw-element-id="402640748" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h4 style="text-align: center;" class="jw-heading-40"><strong><span style="color: #860f0f;">A vs B </span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;">B</span></h4>    </div>
+            <h4 style="text-align: center;" class="jw-heading-40"><strong><span style="color: #860f0f;">A vs B </span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;"></span></h4>    </div>
 </div><div id="jw-element-402640130" data-jw-element-id="402640130" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/ourlibrary.com/L2/tv2" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
