--- a/L1/tv6.html
+++ b/L1/tv6.html
@@ -57,7 +57,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://kroozott.xyz:8080/live/265566.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://cdn.rtvdrenthe.nl/live/rtvdrenthe/tv/1080p/prog_index.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
