--- a/L2/tv1.html
+++ b/L2/tv1.html
@@ -82,7 +82,7 @@ video {
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://honeybee.watch:25461/live/Mckee547/Mckee777/515737.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://cdn.rtvdrenthe.nl/live/rtvdrenthe/tv/1080p/prog_index.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
