--- a/computer/index.html
+++ b/computer/index.html
@@ -441,7 +441,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
     <div id="jw-element-411513957" data-jw-element-id="411513957" style="width: 33.333333333333%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-first-child jw-responsive lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-411513997" data-jw-element-id="411513997" class="jw-tree-node jw-element jw-button jw-node-is-first-child jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
-            <a href="mailto:ourlibrary2@outlook.com" title="ourlibrary2@outlook.com" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #4c1f68;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #692b8f;">
+         <!---   <a href="mailto:ourlibrary2@outlook.com" title="ourlibrary2@outlook.com" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #4c1f68;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #692b8f;"> -->
                             <span class="jw-btn-icon">
                     <!--?xml version="1.0" encoding="iso-8859-1"?-->
 <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
@@ -556,7 +556,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
 </div></div><div id="jw-element-411513959" data-jw-element-id="411513959" style="width: 33.333333333333%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-last-child jw-responsive lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-411514069" data-jw-element-id="411514069" class="jw-tree-node jw-element jw-button jw-node-is-first-child jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
-            <a href="https://wa.me/message/DDVB2N54Q6LKO1" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="">
+       <!--     <a href="https://wa.me/message/DDVB2N54Q6LKO1" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="">. -->
                             <span class="jw-btn-icon">
                     <!--?xml version="1.0" encoding="iso-8859-1"?-->
 <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
