--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -985,12 +985,12 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
                     <div class="jw-credits-owner">
                         <div id="jw-footer-text">
                             <div class="jw-footer-text-content">
-                                © 2023 - 2024 Ourlibrary                            </div>
+                            <small>   © 2023 - 2024 Ourlibrary reserved            </small>               </div>
                         </div>
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-							&copyright reserved
+							
 
 </div>
                     </div>
