--- a/english-n-l-s/index.html
+++ b/english-n-l-s/index.html
@@ -418,12 +418,12 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                     <div class="jw-credits-owner">
                         <div id="jw-footer-text">
                             <div class="jw-footer-text-content">
-                                © 2023 - 2024 Ourlibrary                            </div>
+                                <small>   © 2023 - 2024 Ourlibrary reserved            </small>                            </div>
                         </div>
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-                                                    &copyright reserved
+                                                  
     <small>
 </div>
                     </div>
