--- a/computer/index.html
+++ b/computer/index.html
@@ -728,8 +728,8 @@
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-    <small>
-        &copyright reserved   </small>
+   <!-- <small>
+        &copyright reserved   </small>  -->
 </div>
                     </div>
                 </div>
