--- a/books/index.html
+++ b/books/index.html
@@ -452,7 +452,7 @@ href="https://dnm23.github.io/ourlibrary.com/computer"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-    &copyright reserved
+    <!-- &copyright reserved -->
 </div>
                     </div>
                 </div>
