--- a/p1/index.html
+++ b/p1/index.html
@@ -890,12 +890,12 @@
                     <div class="jw-credits-owner">
                         <div id="jw-footer-text">
                             <div class="jw-footer-text-content">
-                                © 2023 - 2024 Ourlibrary                            </div>
+                                <small>   © 2023 - 2024 Ourlibrary reserved            </small>                             </div>
                         </div>
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-                                                        &copyright reserved
+                                              <!--          &copyright reserved  -->
     <small>
 </div>
                     </div>
