--- a/p4/index.html
+++ b/p4/index.html
@@ -483,12 +483,12 @@
                     <div class="jw-credits-owner">
                         <div id="jw-footer-text">
                             <div class="jw-footer-text-content">
-                                © 2023 - 2024 Ourlibrary                            </div>
+                                <small>   © 2023 - 2024 Ourlibrary reserved            </small>                            </div>
                         </div>
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-                                                    &copyright reserved
+                                                  
 </div>
                     </div>
                 </div>
