--- a/sr-l-kh-r-g/index.html
+++ b/sr-l-kh-r-g/index.html
@@ -394,12 +394,12 @@
                     <div class="jw-credits-owner">
                         <div id="jw-footer-text">
                             <div class="jw-footer-text-content">
-                                © 2023 - 2024 Ourlibrary                            </div>
+                                <small>   © 2023 - 2024 Ourlibrary reserved            </small>                            </div>
                         </div>
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-                                                    &copyright reserved
+                                                   
     <small>
 </div>
                     </div>
