--- a/sr-l-rh/index.html
+++ b/sr-l-rh/index.html
@@ -462,7 +462,7 @@
                     <div class="jw-credits-owner">
                         <div id="jw-footer-text">
                             <div class="jw-footer-text-content">
-                              <small>  © 2023 - 2024 Ourlibrary reserved       </small>                  </div>
+                              <small>  © 2024 Ourlibrary reserved       </small>                  </div>
                         </div>
                     </div>
                     <div class="jw-credits-right">
