--- a/L1/tv1.html
+++ b/L1/tv1.html
@@ -57,7 +57,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-            const m3u8Url ='http://sdmx.vip:80/play/G7LPEQcHnv3cti2zuoSF_wDVx5IQ65xViF03EDRlhNEs-jtjfZCmpTpOSBi87SaC.m3u8';// Replace with your M3U8 URL
+            const m3u8Url ='https://hls.afintl.com/hls/stream.m3u8';// Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
