--- a/L1/tv3.html
+++ b/L1/tv3.html
@@ -11,10 +11,13 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            background-color:rgb(41, 2, 2);
         }
         video {
             width: 80%;
             max-width: 800px;
+            border: 2px solid #ccc;
+            border-radius: 8px;
         }
     </style>
 </head>
