--- a/L1/tv3.html
+++ b/L1/tv3.html
@@ -69,7 +69,7 @@
         // For browsers that support HLS natively (like Safari)
         else if (video.canPlayType('application/vnd.apple.mpegurl')) {
             var video = document.getElementById('video');
-            video.src = 'https://path/to/your/playlist.m3u8';
+            video.src = 'http://1tv41.icu:8080/live/Gizvid145@giz.com/1234@4321/137720.m3u8';
             video.play();
         } else {
             console.error('HLS is not supported in your browser.');
