--- a/L1/tv2.html
+++ b/L1/tv2.html
@@ -56,7 +56,7 @@
     <script>
         const video = document.getElementById('video');
         const hls = new Hls();
-        const m3u8Url = 'http://1tv41.icu:8080/live/Gizvid145@giz.com/1234@4321/137720.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'http://hsynnd.xyz//live/chrisseintv83/en3uqjrj/207802.m3u8'; // Replace with your M3U8 URL
 
         hls.loadSource(m3u8Url);
         hls.attachMedia(video);
