--- a/computer/index.html
+++ b/computer/index.html
@@ -387,7 +387,7 @@
         </div>
 </div><div id="jw-element-427469380" data-jw-element-id="427469380" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
-            <a href="https://drive.google.com/file/d/1dAGY6IGpjKKRq7_KercI4Md1nTI6YjMS/view?usp=sharing" class="jw-element-content jw-btn jw-btn--size-small jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: var(--jw-swatch--header-color, #860f0f);--jw-comp--button--on-primary-color: var(--jw-swatch--header-color--button-text-on);--jw-comp--button--primary-color-hover: var(--jw-swatch--header-color--button-hover);">
+            <a href="https://apkpure.com/oliptv/ol.iptvplayer" class="jw-element-content jw-btn jw-btn--size-small jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: var(--jw-swatch--header-color, #860f0f);--jw-comp--button--on-primary-color: var(--jw-swatch--header-color--button-text-on);--jw-comp--button--primary-color-hover: var(--jw-swatch--header-color--button-hover);">
                         <div class="jw-btn-caption">
                 OL IPTV App&nbsp; Download            </div>
         </a>
